--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>карточка товара</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   <div class="wraper">
       <div class="pic">
-          <img src="/pic/running-shoe-371625_640.jpg" alt="">
+          <img src="./pic/running-shoe-371625_640.jpg" alt="">
       </div>
       <div class="text">
           <h2>мужские кроссовки</h2>
